<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/select_reminder_type"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLBR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_submit_bg"
            android:elevation="5dp"
            android:text="@string/location_based_reminder" />

        <Button
            android:id="@+id/btnCBR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_submit_bg"
            android:elevation="5dp"
            android:text="@string/calendar_based_reminder" />

        <Button
            android:id="@+id/btnNBL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_submit_bg"
            android:elevation="5dp"
            android:text="@string/nearby_landmarks" />

        <Button
            android:id="@+id/btnCB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_submit_bg"
            android:elevation="5dp"
            android:text="@string/contact_book" />

        <Button
            android:id="@+id/btnCallBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_submit_bg"
            android:elevation="5dp"
            android:text="@string/phone_call_reminder" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnStop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/ic_submit_bg"
                android:elevation="5dp"
                android:text="@string/stop_service" />
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>