<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddLocationBasedReminderActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/reminder_title"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etReminderTitle"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_edittext_bg"
                android:hint="@string/enter_reminder_title"
                android:padding="8dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/reminder_desc"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etReminderDesc"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_edittext_bg"
                android:hint="@string/enter_reminder_desc"
                android:padding="8dp"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/reminder_location"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivSelectLocation"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/select_location" />
            </LinearLayout>

            <EditText
                android:id="@+id/etReminderLattitude"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_edittext_bg"
                android:hint="@string/enter_reminder_latitude"
                android:padding="8dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/etReminderLongitude"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_edittext_bg"
                android:hint="@string/enter_reminder_longitude"
                android:imeOptions="actionDone"
                android:padding="8dp"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/allow_notification"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/allow_notification_desc"
                        android:textColor="@color/grey"
                        android:textSize="14sp" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/chkNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checked="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/allow_alert"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/allow_alert_desc"
                        android:textColor="@color/grey"
                        android:textSize="14sp" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/chkAlert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checked="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/allow_sound"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/allow_sound_desc"
                        android:textColor="@color/grey"
                        android:textSize="14sp" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/chkSound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checked="false" />
            </LinearLayout>


            <Button
                android:id="@+id/btSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/ic_submit_bg"
                android:text="@string/submit" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="*******RESULT*********"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scrollbars="vertical"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>